--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         console.error("Error loading JSON:", error);
       });
   </script>
+  <button>Receipts History</button>
 </body>
 </html>
 `  
